Working on GUI interface to ticket system.